force-app/main/default/objects/Blacklisted__c/Blacklisted__c.object-meta.xml
<CustomObject>
    <label>Blacklisted</label>
    <nameField>
        <displayFormat>BL-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blacklisted</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>