force-app/main/default/objects/Blacklisted__c/fields/Blacklisted__c.field-meta.xml
<CustomField>
    <fullName>Blacklisted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blacklisted?</label>
    <type>Checkbox</type>
</CustomField>