force-app/main/default/objects/Blacklisted__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer</label>
    <referenceTo>Offers__c</referenceTo>
    <relationshipLabel>Blacklisted</relationshipLabel>
    <relationshipName>Blacklisted</relationshipName>
    <type>Lookup</type>
</CustomField>