force-app/main/default/objects/Blacklisted__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PropStrength__Property__c.PropStrength__Allotted__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>PropStrength__Property__c.PropStrength__Property_on_hold_for_Reallocation__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>PropStrength__Property__c.PropStrength__Property_Alloted_Through_Offer__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PropStrength__Property__c</referenceTo>
    <relationshipLabel>Blacklisted</relationshipLabel>
    <relationshipName>Blacklisted</relationshipName>
    <type>Lookup</type>
</CustomField>